--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/indexStyles.css"></link>
+    
     <title>Midterm Practice</title>
+    
     <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
     <link rel="manifest" href="./favicons/site.webmanifest">
+   
+    <script src="/scripts/main.js"></script>
 </head>
 <body>
     <h1 style="text-align: center;">Midterm Practice</h1>
+    <div style="display: flex; justify-content: center;">
+        <img style="width: 80%; height: 75%;" src="./images/pexels-quang-nguyen-vinh-2131801.jpg" alt="Sunset">
+    </div>
 </body>
 </html>
